--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     </style>
 </head>
 <body>
-<img src="nutshell.png" alt="Nutshell Logo">
+<img src="nutshell-logo-xl.svg" alt="Nutshell Logo">
 </body>
 </html>
